--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,13 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
-}
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+	background-color: #000;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-}
+
 a {
 	color: orange;
 	text-decoration: none;
@@ -28,18 +19,23 @@ a:hover, a:focus {
 a img{
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+
+.nav-font {
+  font-family: 'Baloo Bhai', cursive;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+
+.filter-font {
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
 }
-#maincontent {
-  background-color: #f3f3f3;
+
+.maincontent {
+  background-color: #fff;
   min-height: 100%;
 }
-#footer {
+
+.footer {
+  font-family: 'Baloo Bhai', cursive;
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
@@ -49,66 +45,68 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
-nav {
+.nav {
   width: 100%;
-  height: 80px;
-  background-color: #252831;
-  text-align:center;
+  height: 100%;
+  background-color: #444;
+  text-align: center;
 }
-nav h1 {
-  margin: auto;
-}
-nav h1 a {
+
+.nav-link {
   color: #fff;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 10px;
+  font-size: 30px;
   text-transform: uppercase;
 }
-#breadcrumb {
+
+.breadcrumb {
+    font-family: 'Raleway', sans-serif;
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
-#breadcrumb li {
+.breadcrumb li {
     display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
+.breadcrumb li+li:before {
     padding: 8px;
     color: black;
     content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
-#breadcrumb li a {
+.breadcrumb li a {
     color: #0275d8;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
-#breadcrumb li a:hover {
+.breadcrumb li a:hover {
     color: #01447e;
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
-#map {
+.map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
+.map-restaurant-info {
+  width: 100%;
+  height: 200px;
+}
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
+  text-align: center;
+  padding: 10px;
 }
 .filter-options h2 {
   color: white;
@@ -130,51 +128,47 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Listing ====================== */
-#restaurants-list {
+.restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-#restaurants-list li {
+.restaurants-list-item {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 25%;
 }
-#restaurants-list .restaurant-img {
+.restaurants-list .restaurant-img {
   background-color: #ccc;
-  display: block;
-  margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  margin-top: 15px;
+  width: 100%;
+  height: auto;
 }
-#restaurants-list li h1 {
+
+.restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  line-height: 1.3;
+  font-family: 'Baloo Bhai', cursive;
+  font-size: 30px;
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
-#restaurants-list p {
-  margin: 0;
-  font-size: 11pt;
-}
-#restaurants-list li a {
-  background-color: orange;
+
+.view-details {
+  background-color: #ffa500;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 15pt;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -183,93 +177,142 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
+
+.restaurant-img {
+	width: 100%;
+  height: auto;
 }
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
+
+.restaurant-img-container {
   width: 50%;
 }
-.inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
-}
-.inside #footer {
-  bottom: 0;
-  position: absolute;
+
+.restaurant-info-container {
+  text-align: center;
   width: 50%;
 }
-#restaurant-name {
-  color: #f18200;
-  font-family: Arial,sans-serif;
+
+.restaurant-address {
+  font-family: 'Raleway', sans-serif;
   font-size: 20pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 15px 0 30px;
-  text-transform: uppercase;
-  line-height: 1.1;
-}
-#restaurant-img {
-	width: 90%;
-}
-#restaurant-address {
-  font-size: 12pt;
   margin: 10px 0px;
 }
-#restaurant-cuisine {
+
+.restaurant-cuisine {
   background-color: #333;
+  font-family: 'Raleway', sans-serif;
   color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
-  letter-spacing: 10px;
+  font-size: 13pt;
+  letter-spacing: 4px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 100%;
 }
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+
+.restaurant-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
 }
-#reviews-container {
-  padding: 30px 40px 80px;
+
+.reviews-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-#reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+
+.restaurant-hours {
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  margin-right: auto;
+  margin-left: auto;
 }
-#reviews-list {
-  margin: 0;
-  padding: 0;
+
+
+/* ================= Reviews ====================*/
+.reviews-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-#reviews-list li {
+
+.review {
+  font-family: 'Raleway', sans-serif;
   background-color: #fff;
-    border: 2px solid #f3f3f3;
-  display: block;
-  list-style-type: none;
+  border: 2px solid #f3f3f3;
   margin: 0 0 30px;
-  overflow: hidden;
   padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
+  text-align: left;
+  width: 80%;
 }
-#reviews-list li p {
-  margin: 0 0 10px;
+
+.reviews-title {
+  font-family: 'Baloo Bhai', cursive;
+  color: #f58500;
+  font-size: 30pt;
+  font-weight: 300;
+  padding-bottom: 1pt;
+  text-align: center;
 }
-#restaurant-hours td {
-  color: #666;
+
+.review-name {
+  font-family: 'Baloo Bhai', cursive;
+}
+
+
+
+
+.shadow {
+  -moz-box-shadow:    1px 1px 3px 2px #ccc;
+  -webkit-box-shadow: 1px 1px 3px 2px #ccc;
+  box-shadow:         1px 1px 3px 2px #ccc;
+}
+
+@media screen and (max-width: 1024px) {
+
+  body {
+    width: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+
+  .restaurants-list-item {
+    width: 35%;
+  }
+
+  .restaurant-img-container, .restaurant-address-hours, .restaurant-info-container {
+    width: 100%;
+  }
+
+}
+
+@media screen and (max-width: 800px) {
+
+  body {
+    width: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
+  }
+
+  .nav-link {
+    font-size: 25px;
+  }
+
+  .restaurants-list-item {
+    text-align: center;
+    width: 100%;
+  }
+
+  .restaurant-address {
+    font-size: 18px;
+  }
+
+  .restaurant-hours {
+    font-size: 15px;
+  }
+
 }
